# cfx-server-artifacts-updater

./: .gitignore  Cargo.toml  README.md  artifacts.php  update-artifacts.php  update-artifacts.ps1  update-artifacts.sh
src/: main.rs
