[package]
name    = "update-artifacts"
version = "0.1.1"
edition = "2021"

[dependencies]
indicatif = "0.17.8"
reqwest    = { version = "0.12", features = ["blocking", "json"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip        = "2.1"
clap       = { version = "4.5", features = ["derive"] }
anyhow     = "1.0"
tar        = "0.4"
xz2        = "0.1"